--- a/css/main.css
+++ b/css/main.css
@@ -49,44 +49,37 @@ p.desc-text{
     padding-top: 5px;
 }
 @font-face {
-    font-family: 'icomoon';
-    src:url('../fonts/icomoonacfe.eot?-yinaf8');
-    src:url('../fonts/icomoond41d.eot?#iefix-yinaf8') format('embedded-opentype'),
-    url('../fonts/icomoonacfe.woff?-yinaf8') format('woff'),
-    url('../fonts/icomoonacfe.ttf?-yinaf8') format('truetype'),
-    url('../fonts/icomoonacfe.svg?-yinaf8#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?85vfpe');
+  src:  url('../fonts/icomoon.eot?85vfpe#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?85vfpe') format('truetype'),
+    url('../fonts/icomoon.woff?85vfpe') format('woff'),
+    url('../fonts/icomoon.svg?85vfpe#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-    font-family: 'icomoon';
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-mail:before {
-    content: "\e600";
+
+.icon-facebook:before {
+  content: "\ea90";
 }
-
-.icon-github:before {
-    content: "\e601";
-}  
-
-.icon-twitter:before {
-    content: "\e602";
-}
-
-.icon-linkedin:before {
-    content: "\e603";
+.icon-instagram:before {
+  content: "\ea92";
 }
 
 .carousel-slide{
